# duckdb-pbix-extension

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  test_parquet_reader.test  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml  _extension_distribution.yml
data/: DataModel  DataModel_ABC  DataModel_M  abc.pbix  metadata.db  tiny.pbix
ksy/: abf_xpress9.ksy  dictionary.ksy  hidx.ksy  idf.ksy  idfmeta.ksy  pbix.ksy  zip_central_dir.ksy  zip_data_model.ksy
src/: CMakeLists.txt  abf_xpress9.cpp  abf_xpress9.h  column_data_dictionary.cpp  column_data_idf.cpp  dos_datetime.h  huffman_decoder.cpp  huffman_decoder2.cpp  idea._pp  idea.cpp  pbix.h  pbix_extension._pp  pbix_extension.cpp  pbix_reader.cpp  pbix_scanner._pp  pbix_scanner.cpp  sqlite_db.cpp  sqlite_stmt.cpp  sqlite_utils.cpp  vertipaq_decoder.cpp  zip.cpp  zip.h  zip_archive.cpp
src/abf/: AbfParser.cpp  AbfParser.h  BackupFile.cpp  BackupFile.h  BackupLog.cpp  BackupLog.h  BackupLog.xml  BackupLogHeader.cpp  BackupLogHeader.h  Collations.cpp  Collations.h  Crc32.c  Crc32.h  FileGroup.cpp  FileGroup.h  FileGroups.cpp  FileGroups.h  FileHandleStream.cpp  FileHandleStream.h  FileList.cpp  FileList.h  Languages.cpp  Languages.h  LogBackupFile.cpp  LogBackupFile.h  VirtualDirectory.cpp  VirtualDirectory.h  VirtualDirectory.xml  ZipUtils.cpp  ZipUtils.h  abf_parser.cpp  abf_parser.h  backup_file.cpp  backup_log.cpp  backup_log.h  backup_log_header.cpp  collations.cpp  collations.h  crc32.c  crc32.h  (+17 more)
src/include/: column_data_dictionary.h  huffman_decoder.h  huffman_decoder2.h  pbix.hpp  pbix_extension.hpp  pbix_reader.hpp  pbix_scanner.hpp  pbix_utils.hpp  sqlite_db.hpp  sqlite_options.hpp  sqlite_stmt.hpp  sqlite_utils.hpp  vertipaq_decoder.hpp  vertipaq_meta.hpp  zip_archive.hpp
src/kaitai/: column_data_dictionary.h  exceptions.h
src/kaitaistruct/: dos_datetime.cpp  dos_datetime.h  idfmeta_parser.h  zip.cpp  zip.h
src/ksy/: column_data_dictionary.cpp  column_data_hidx.cpp  column_data_hidx.h  column_data_idf.h  idfmeta_parser.cpp
src/vertipaq/: column_data_dictionary.h  column_data_idfmeta.cpp  column_data_idfmeta.h  huffman_decoder.cpp  vertipaq_decoder.cpp  vertipaq_decoder.hpp  vertipaq_meta.hpp
src/xpress9/: CMakeLists.txt  Xpress9DecHuffman.c  Xpress9DecLz77.c  Xpress9Internal.h  Xpress9Misc.c  Xpress9Wrapper.cpp  Xpress9Wrapper.h  xpress.h  xpress9.h
test/sql/: pbix.test
